--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"GPL-2.0"
 	],
 	"require": {
-		"typo3/cms-core": "~8.6.0||~8.7.0||dev-master"
+		"php": "~7.0.0|~7.1.0|~7.2.0",
+		"typo3/cms-core": ">=7.6.0,<9.0"
 	},
 	"autoload": {
 		"psr-4": {
